# asm_labs

./: README.md
lab1/: CMakeLists.txt  solution.asm  tests.cpp
lab2/: CMakeLists.txt  Lab2_Smirnov_Nikita_Unix.asm  solution.asm  tests.cpp
lab3/: CMakeLists.txt  Lab3_Smirnov_Nikita_Unix.asm  tests.cpp
lab4/: CMakeLists.txt  Lab4_Smirnov_Nikita_Unix.asm  tests.cpp
lab5/: CMakeLists.txt  Lab5_Smirnov_Nikita_Unix.asm  solution.asm  tests.cpp
lab6/: CMakeLists.txt  solution.asm  tests.cpp
